<resources>
    <string name="app_name">Bus Reservation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_date">DateActivity</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">Date is: </string>
    <string name="date_selected"></string>
    <string name="title_activity_station">StationActivity</string>
    <string name="title_activity_search_bus">SearchBus</string>
    <string name="title_activity_bus_booking">BusBooking</string>
    <string name="hello">Hello World, MyAndroidAppActivity!</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="btn_display">Display</string>
    <string name="title_activity_seat_detail">SeatDetail</string>
    <string-array name="countries_list">
        <item>Select Seat</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_payment_delivery">PaymentDelivery</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contact</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip">Pin Code</string>
    <string name="hint_city">City</string>

    <string name="btn_sign_up">Sign Up</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter Valid Contact Number</string>
    <string name="err_msg_address">Enter the Write Address</string>
    <string name="err_msg_zip">Correct Zip Code</string>
    <string name="err_msg_city">Required</string>
    <string name="title_activity_bustrack">Map</string>


</resources>
