<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aashu.busreservation.Search"
    tools:showIn="@layout/app_bar_search">

   <android.support.v7.widget.LinearLayoutCompat
       android:layout_marginTop="10dp"
       android:layout_marginLeft="5dp"
       android:layout_width="350dp"
       android:layout_height="150dp"
       android:background="#5df2dada"
       android:id="@+id/view">
   </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="290dp"
        android:layout_height="1dp"
        android:layout_marginTop="80dp"
        android:background="#000"
        android:layout_marginLeft="20dp">
    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="From"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/view"
        android:layout_alignLeft="@+id/view"
        android:layout_alignStart="@+id/view"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Enter City"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/view"
        android:layout_alignLeft="@+id/view"
        android:layout_alignStart="@+id/view"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Enter City"
        android:id="@+id/textView5"
        android:onClick="sendMessage"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginTop="80dp"/>
<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="350dp"
    android:layout_height="100dp"
    android:background="#5df2dada"
    android:layout_marginTop="250dp"
    android:layout_marginLeft="5dp"
    android:id="@+id/view2">
</android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Journey Date"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/view2"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:onClick="setDate"
        android:background="#5df2dada"
        android:text="@string/date_button_set"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="8dp"/>



    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_view_set"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/view2"
        android:layout_alignEnd="@+id/view2"
        android:layout_marginRight="100dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/date_selected"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="Search Buses"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:background="#842727"
        android:textColor="#fff"/>


</RelativeLayout>
