<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="layout.PaymentDeliveryFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1b847b7b"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_gravity="center_horizontal">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Name"
                android:id="@+id/oname"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:layout_marginLeft="20dp"
                android:layout_column="2" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Address"
                android:id="@+id/mobile"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:id="@+id/address"
                android:layout_column="2" />

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Pin Code"
                android:textColor="#000"
                android:layout_marginTop="10dp"
               />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/pin"
                android:layout_marginLeft="20dp"
                android:layout_column="2" />

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="City "
                android:textColor="#000"
                android:layout_marginTop="7dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:id="@+id/city"
                android:layout_column="2" />

        </TableRow>
        <TableRow android:gravity="center">
            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="SUBMIT" />
        </TableRow>
    </TableLayout>
-->

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_address" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_zip" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_city" />
            </android.support.design.widget.TextInputLayout>
<!--
            <Button android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Sing up"
                android:background="#b10000"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>
-->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Card Details"
                        android:textColor="#7e712f"
                        android:textSize="25dp"/>
                </TableRow>

                <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Card No."
                android:layout_marginTop="10dp"
                android:textSize="20dp"/>

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:inputType="number"
                        android:id="@+id/card"
                        />
                </TableRow>
                <TableRow>
            <TextView
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="A/c holder Name"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:singleLine="true"
                        android:id="@+id/name"
                        />
                </TableRow>
                </TableLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
               <TableRow android:gravity="center" >
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:textSize="20dp"
                       android:textColor="#000"
                       android:textAlignment="center"
                       android:text="Validity"/>
               </TableRow>

                <TableRow android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:textAlignment="center"
                        android:text="Month"/>
                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/month"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Year"
                        android:layout_marginTop="10dp"
                        android:textSize="20dp"
                        />
                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/year"
                        />
                </TableRow>
            </TableLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="CVV NO."
                        android:layout_marginTop="10dp"
                        android:textSize="20dp"
                        />
                    <EditText
                        android:layout_width="200dp"
                        android:layout_marginLeft="20dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/cvv"
                        />
                </TableRow>
            </TableLayout>

            <Button android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Sing up"
                android:background="#b10000"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>


</ScrollView>